# virtual_machine

./: .gitignore  CMakeLists.txt  QuickSorting.suffering  bubbleSorting.suffering  eratosfen.suffering  factorial.suffering  jitTests  optimizationsTest.suffering  sorting.suffering  tree.suffering  virtual_machine.sln
tests/: tests.cpp
virtual_machine/: ArrayObject.h  CodeObject.h  DecodedInstruction.h  EvaVM.h  EvaValue.h  EvaluationValue.h  EvaluationValueType.h  Global.h  Logger.h  Object.h  OpCode.h  StringObject.h  Vm.h  bytecodeGenerator.h  compiler.h  grammar.bnf  handlers.cpp  handlers.h  helpers.h  parser.h  virtual_machine.cpp  virtual_machine.vcxproj  virtual_machine.vcxproj.filters  vm.h
virtual_machine/disassembler/: Disassembler.h
